--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello</title>
+    <link rel="stylesheet" href="css/css_module2_solution.css">
+    <title>Coursera Mod 2 Test</title>
 </head>
 <body>
-<h1>Hello!</h1>
+    
+<div class="title_bg">
+        <h1>Tecnology Newsletter</h1>
+</div>
+
+<div class="content"> 
+        <div class="row">
+                <div class="col-lg-4 col-md-6"> 
+                        <section class="section_1">
+                                <span id="span_1"> Data Science </span>
+                                <p id="col_1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium consequatur atque in fugit pariatur nulla veniam commodi odio iure nostrum sint, harum consectetur dolore. Deleniti iusto officia libero nihil velit.</p>
+                        </section>
+
+                </div>
+                <div class="col-lg-4 col-md-6">
+                        <section class="section_2">
+                                <span id="span_2"> API </span>
+                                <p id="col_1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium consequatur atque in fugit pariatur nulla veniam commodi odio iure nostrum sint, harum consectetur dolore. Deleniti iusto officia libero nihil velit. </p>
+                        </section>
+                </div>
+                <div class="col-lg-4 col-md-12"> 
+                        <section class="section_3">
+                                <span id="span_3"> UX/UI </span>
+                                <p id="col_1"> ipsum dolor sit amet consectetur adipisicing elit. Laudantium consequatur atque in fugit pariatur nulla veniam commodi odio iure nostrum sint, harum consectetur dolore. Deleniti iusto officia libero nihil velit.</p>
+                        </section>
+                </div>
+        </div>
+</div>
 </body>
 </html>
